# Vse3

Lab1/: CMakeLists.txt  Lab1.vcxproj  Lab1.vcxproj.filters
Lab1/Debug/: vc141.idb  vc142.idb
Lab1/Debug/Lab1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lab1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Lab1/Task1/: Task1.c
Lab1/Task2/: CMakeLists.txt  Task2.c
Lab1/Task3/: CMakeLists.txt  Task3.c
Lab1/Task4/: CMakeLists.txt  task4.c
Lab1/Task5/: CMakeLists.txt  Task5_func.c  task5_main.c
Lab1/Task6/: CMakeLists.txt  task6_func.c  task6_main.c
Lab1/Task7/: CMakeLists.txt  task7_func.c  task7_main.c
Lab2/: Task1.c
Lab2/Debug/Laba2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Laba2.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Lab3/: CMakeLists.txt  Laba 3.vcxproj  Task1.c
Lab3/Debug/: vc141.idb
Lab3/Debug/Laba 3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Laba 3.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Lab4/Debug/: vc141.idb
Lab4/Debug/laba4.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  laba4.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Lab5/Debug/Laba5.tlog/: CL.command.1.tlog
