# CMakeList.txt: проект CMake для Task1; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

project ("lab1")
add_subdirectory ("Task1")
add_subdirectory ("Task2")
add_subdirectory ("Task3")
add_subdirectory ("Task4")
add_subdirectory ("Task5")
add_subdirectory ("Task6")
# TODO: Добавьте тесты и целевые объекты, если это необходимо.
